--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/70e56ebe5d.js" crossorigin="anonymous"></script>
     <style>
         .manrope{
         font-family: "Manrope", sans-serif;
@@ -20,7 +21,8 @@
           theme: {
             extend: {
               colors: {
-                clifford: '#da373d',
+                'linear-start': '#FF8938',
+                'linear-end': '#FF0000',
               }
             }
           }
@@ -29,6 +31,30 @@
 
 </head>
 <body class="font-manrope">
-    
+    <header class="container mx-auto
+    mt-10 pl-10 md:pl-0">
+        <div class="md:flex justify-between items-center">
+            <div class="space-y-5">
+                <p class="text-5xl md:text-4xl lg:text-7xl font-extrabold">It's good <br>
+                    tea time at The <br>
+                    Tea House</p>
+                <h1>Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</h1>
+                <button class="btn bg-gradient-to-r from-linear-start to-linear-end text-white" >Explore More 
+                    <img src="images/arrow.png" alt="">
+                </button>
+            </div>
+            <div>
+                <img src="images/banner.png" alt="">
+                <div class="flex items-center gap-4
+                w-[255px] rounded-lg bg-white relative -top-24 left-5  py-2">
+                    <i class="fa-solid fa-star text-amber-400 text-2xl pl-14"></i>
+                    <div>
+                        <h2 class="text-3xl font-bold">5.00</h2>
+                        <p>Trust Pilot Ratings</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
