--- a/index.html
+++ b/index.html
@@ -56,5 +56,136 @@
             </div>
         </div>
     </header>
+    <main class="container mx-auto" >
+        <section>
+            <div class="text-center space-y-3 mb-11">
+                <p class=" text-4xl md:text-5xl font-bold">Our Featured Products</p>
+                <h2>There are many variations of passages of Lorem Ipsum available, but the majority have suffered <br>alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </h2>
+            </div>
+            <div class="grid gap-10 md:grid-cols-2 lg:grid-cols-4 ">
+                <div class="card card-compact bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4]  shadow-xl space-y-3">
+                    <figure>
+                      <img class="pt-5"
+                        src="images/tea-1.png"
+                        alt="" />
+                    </figure>
+                    <div class="text-center p-3">
+                      <h2 class=" text-xl font-bold">Milk Tea</h2>
+                      <p class="mb-5">Creamer could be replaced by fresh milk
+                        
+                      </p>       
+                    </div>
+                  </div>
+                <div class="card card-compact bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl space-y-3">
+                    <figure>
+                      <img class="pt-5"
+                        src="images/tea-2.png"
+                        alt="" />
+                    </figure>
+                    <div class="text-center p-3">
+                      <h2 class=" text-xl font-bold">Black Tea</h2>
+                      <p class="mb-5">Creamer could be replaced by fresh milk
+
+                      </p>       
+                    </div>
+                  </div>
+                <div class="card card-compact bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl space-y-3">
+                    <figure>
+                      <img class="pt-5"
+                        src="images/tea-3.png"
+                        alt="" />
+                    </figure>
+                    <div class="text-center p-3">
+                      <h2 class=" text-xl font-bold">Lemon Tea</h2>
+                      <p class="mb-5">Creamer could be replaced by fresh milk
+
+                      </p>       
+                    </div>
+                  </div>
+                <div class="card card-compact bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl space-y-3">
+                    <figure>
+                      <img class="pt-5"
+                        src="images/tea-4.png"
+                        alt="" />
+                    </figure>
+                    <div class="text-center p-3">
+                      <h2 class=" text-xl font-bold">Green Tea</h2>
+                      <p class="mb-5">Creamer could be replaced by fresh milk
+
+                      </p>       
+                    </div>
+                  </div>
+            </div>
+        </section>
+        <section class="my-24 flex flex-col md:flex-row gap-8 items-center">
+            <div class="grid grid-cols-1 gap-8 md:grid-cols-2 flex-1">
+                <div class=" h-36 bg-gradient-to-r from-[#e6bbbb] to-[#FF8938] rounded-lg flex justify-center items-center text-2xl font-semibold"> Erorr
+                </div>
+                <div class="bg-[#d6cfc1] row-span-2 px-8 py-12 flex justify-center" >
+                    <img src="images/fresh-1.png" alt="">
+                </div>
+                <div class="bg-[#667459] row-span-2 px-8 py-12 flex justify-center">
+                    <img src="images/fresh-2.png" alt="">
+                </div>
+                <div class="h-36 bg-gradient-to-r from-[#D9D9D9] to-[#e08181] rounded-lg flex justify-center items-center text-2xl font-semibold">
+                    Happy
+                </div>
+            </div>
+            <div class="space-y-5 px-5 flex-1">
+                <p class="text-5xl font-bold">Great Tea, 
+                  <br>  Freshly Presented</p>
+                  <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                  <p class="font-semibold text-xl" >Unique Taste</p>
+                  <h4>A Unique and different style from other teapots gives a <br> luxurious and minimalist impression</h4>
+                  <p class="font-semibold text-xl" >Premium Quality</p>
+                  <h4>A Unique and different style from other teapots gives a <br> luxurious and minimalist impression</h4>
+            </div>
+        </section>
+        <section class="my-24 bg-gradient-to-r from-linear-start to-linear-end px-8 md:px-20 py-20 gap-8  lg:flex items-center ">
+            <div class="space-y-5  mb-12 lg:mb-0">
+                <p class="text-5xl font-bold text-white">Meet Our Super <br> Clients</p>
+                <h3 class="text-white">There are many variations of passages of Lorem Ipsum available,  but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </h3>
+                <button class="btn bg-white text-gradient-to-r from-linear-start to-blue-linear-end" >Show All</button>
+            </div>
+            <div class="relative">
+                <div class="relative opacity-40 bg-white z-10 mb-16 p-10 rounded-lg">
+                    <div class="absolute -left-5 -top-5 bg-white rounded-full border-4">
+                        <img src="images/client.png" alt="">
+                    </div>
+                    <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h1 class="font-bold mt-3">Ilham Yuda</h1>
+                    <h3>Businessman</h3>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+
+                <div class=" absolute md:w-[435px] z-20 top-40 -left-12 bg-white p-10 rounded-lg">
+                    <div class="absolute md:-left-5 -top-5 bg-white rounded-full border-4">
+                        <img src="images/client.png" alt="">
+                    </div>
+                    <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h1 class="font-bold mt-3">Ilham Yuda</h1>
+                    <h3>Businessman</h3>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+
+                <div class="relative opacity-40 bg-white z-10 p-10 rounded-lg">
+                    <div class="absolute -left-5 -top-5 bg-white rounded-full border-4">
+                        <img src="images/client.png" alt="">
+                    </div>
+                    <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h1 class="font-bold mt-3">Ilham Yuda</h1>
+                    <h3>Businessman</h3>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </main>
 </body>
 </html>
