--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     mt-10 pl-10 md:pl-0">
         <div class="md:flex justify-between items-center">
             <div class="space-y-5">
-                <p class="text-5xl md:text-4xl lg:text-7xl font-extrabold">It's good <br>
+                <p class="text-5xl md:text-5xl lg:text-7xl font-extrabold">It's good <br>
                     tea time at The <br>
                     Tea House</p>
                 <h1>Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</h1>
@@ -59,7 +59,7 @@
     <main class="container mx-auto" >
         <section>
             <div class="text-center space-y-3 mb-11">
-                <p class=" text-4xl md:text-5xl font-bold">Our Featured Products</p>
+                <p class=" text-4xl p-6 md:text-5xl font-bold">Our Featured Products</p>
                 <h2>There are many variations of passages of Lorem Ipsum available, but the majority have suffered <br>alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </h2>
             </div>
             <div class="grid gap-10 md:grid-cols-2 lg:grid-cols-4 ">
@@ -185,6 +185,56 @@
                 </div>
             </div>
 
+        </section>
+        <section class="my-24" >
+            <div class="text-center p-6 space-y-4 mb-11">
+                <p class=" text-4xl md:text-5xl font-bold">Our Featured Products</p>
+                <h2>There are many variations of passages of Lorem Ipsum available, but the majority have suffered <br>alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </h2>
+            </div>
+            <div class="grid md:grid-cols-3 gap-10">
+                <div class="card bg-base-100 border-4  shadow-xl">
+                    <figure class="px-10 pt-10">
+                      <img
+                        src="images/news-1.png"
+                        alt=""
+                        class="rounded-xl" />
+                    </figure>
+                    <div class="card-body">
+                       <h1 class="text-[#777777]">Feb 05, 2027</h1> 
+                      <h2 class="card-title">Collecting 8 points for discount</h2>
+                      <p class="text-[#777777] ">There are many variations of passages of Lorem Ipsum available.</p>
+                      <p class="font-bold">Learn More</p>
+                    </div>
+                  </div>
+                <div class="card bg-base-100 border-4  shadow-xl">
+                    <figure class="px-10 pt-10">
+                      <img
+                        src="images/news-2.png"
+                        alt=""
+                        class="rounded-xl" />
+                    </figure>
+                    <div class="card-body">
+                       <h1 class="text-[#777777]">Feb 05, 2027</h1> 
+                      <h2 class="card-title">Collecting 8 points for discount</h2>
+                      <p class="text-[#777777] ">There are many variations of passages of Lorem Ipsum available.</p>
+                      <p class="font-bold">Learn More</p>
+                    </div>
+                  </div>
+                <div class="card bg-base-100 border-4  shadow-xl">
+                    <figure class="px-10 pt-10">
+                      <img
+                        src="images/news-3.png"
+                        alt=""
+                        class="rounded-xl" />
+                    </figure>
+                    <div class="card-body">
+                       <h1 class="text-[#777777]">Feb 05, 2027</h1> 
+                      <h2 class="card-title">Collecting 8 points for discount</h2>
+                      <p class="text-[#777777] ">There are many variations of passages of Lorem Ipsum available.</p>
+                      <p class="font-bold">Learn More</p>
+                    </div>
+                  </div>
+            </div>
         </section>
     </main>
 </body>
