--- a/index.html
+++ b/index.html
@@ -237,5 +237,54 @@
             </div>
         </section>
     </main>
+    <footer class="  bg-gradient-to-r from-[#ff00001f] to-[#ff883886] text-base-content p-10">
+        <div class="footer">
+            <nav>
+                <div class="pb-6">
+                    <img src="images/cup.png" alt="">
+                </div>
+                <h6 class="footer-title">Quick Links</h6>
+                <a class="link link-hover">Home</a>
+                <a class="link link-hover">About Us</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+              </nav>
+              <nav>
+                <h6 class="footer-title md:pt-24">Our Service</h6>
+                <a class="link link-hover">Life Insurance</a>
+                <a class="link link-hover">Car Insurance</a>
+                <a class="link link-hover">Health Insurance</a>
+                <a class="link link-hover">Health Insurance</a>
+              </nav>
+              <nav>
+                <h6 class="footer-title md:pt-24">Help</h6>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+              </nav>
+              <form>
+                <div class="flex relative md:-left-28 items-center mb-8 gap-3">
+                    <p class="font-bold text-[20px]">Ready to get strated?</p>
+                    <button class="btn bg-gradient-to-r from-linear-start to-linear-end text-white" >Get Started</button>
+                </div>
+                <h6 class="footer-title">Subscribe to our <br> newsletter</h6>
+                <fieldset class="form-control w-80">
+                  <label class="label">
+                    <span class="label-text">Enter your Email address</span>
+                  </label>
+                  <div class="join">
+                    <input
+                      type="text"
+                      placeholder="username@site.com"
+                      class="bg-transparent border-b-2 border-black" />
+                    <button class="btn bg-gradient-to-r from-linear-start to-linear-end rounded-full text-white "><i class="fa-solid fa-angle-right"></i></button>
+                  </div>
+                </fieldset>
+              </form>
+        </div>
+        <div class="flex justify-center pt-5">
+            <p>© 2027 UIDesign.to - All rights reserved.</p>
+        </div>
+      </footer>
 </body>
 </html>
